# rust-cli-api-caller

./: .gitignore  Cargo.toml  README.md
config/: config.toml.dist
src/: api_service.rs  cli.rs  client.rs  config.rs  lib.rs  main.rs  reader.rs
