[package]
name = "cli-api-caller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
derive = "1.0"
hyper = { version = "1.1", features = ["full"] }
hyper-rustls = "0.26"
rustls = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
toml = "0.8"
